feat : 비인기 카테고리 AI 분석 추가